--- a/FJYL.Web/Web.config
+++ b/FJYL.Web/Web.config
@@ -7,5 +7,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="RemoteOnly" defaultRedirect="error.html" />
+    <authentication mode="Forms">
+      <forms name=".FJYL" loginUrl="~/Admin/Login" protection="All" cookieless="UseCookies" slidingExpiration="true" timeout="60" />
+    </authentication>
   </system.web>
 </configuration>
