--- a/FJYL.Web/FJYL.Web.csproj
+++ b/FJYL.Web/FJYL.Web.csproj
@@ -83,8 +83,56 @@
     <Content Include="Admin\AdminContent\css\style.css" />
     <Content Include="Admin\AdminContent\images\icons_gray.png" />
     <Content Include="Admin\Welcome.aspx" />
+    <Content Include="css\lightbox.css" />
+    <Content Include="css\slider.css" />
+    <Content Include="img\anli\a.jpg" />
+    <Content Include="img\anli\aa.jpg" />
+    <Content Include="img\anli\b.jpg" />
+    <Content Include="img\anli\bb.jpg" />
+    <Content Include="img\anli\c.jpg" />
+    <Content Include="img\anli\cc.jpg" />
+    <Content Include="img\anli\d.jpg" />
+    <Content Include="img\anli\dd.jpg" />
+    <Content Include="img\anli\e.jpg" />
+    <Content Include="img\anli\ee.jpg" />
+    <Content Include="img\anli\f.jpg" />
+    <Content Include="img\anli\ff.jpg" />
+    <Content Include="img\anli\g.jpg" />
+    <Content Include="img\anli\gg.jpg" />
+    <Content Include="img\anli\h.jpg" />
+    <Content Include="img\anli\hh.jpg" />
+    <Content Include="img\anli\i.jpg" />
+    <Content Include="img\anli\ii.jpg" />
+    <Content Include="img\bar.png" />
+    <Content Include="img\close.png" />
+    <Content Include="img\contacttitle.jpg" />
+    <Content Include="img\dot.png" />
+    <Content Include="img\img1.jpg" />
+    <Content Include="img\img2.jpg" />
+    <Content Include="img\img3.jpg" />
+    <Content Include="img\img4.jpg" />
+    <Content Include="img\loading.gif" />
+    <Content Include="img\marqueebg.jpg" />
+    <Content Include="img\marqueeico.jpg" />
+    <Content Include="img\menuBg.png" />
+    <Content Include="img\next.png" />
+    <Content Include="img\pic1.jpg" />
+    <Content Include="img\pic2.jpg" />
+    <Content Include="img\pic3.jpg" />
+    <Content Include="img\prev.png" />
+    <Content Include="img\righttitle.jpg" />
+    <Content Include="img\zizhi\aa.jpg" />
+    <Content Include="img\zizhi\aaa.jpg" />
+    <Content Include="img\zizhi\bb.jpg" />
+    <Content Include="img\zizhi\bbb.jpg" />
+    <Content Include="img\zizhi\cc.jpg" />
+    <Content Include="img\zizhi\ccc.jpg" />
+    <Content Include="img\zizhi\dd.jpg" />
+    <Content Include="img\zizhi\ddd.jpg" />
     <Content Include="packages.config" />
     <Content Include="Admin\Admin.Master" />
+    <Content Include="scripts\jquery.flexslider-min.js" />
+    <Content Include="scripts\lightbox.min.js" />
     <Content Include="scripts\UEditor\net\config.json" />
     <Content Include="scripts\UEditor\net\controller.ashx" />
     <Content Include="scripts\UEditor\net\README.md" />
