--- a/FJYL.Web/Web.config
+++ b/FJYL.Web/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -12,13 +12,23 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+  <appSettings>
+    <add key="AccessDBPath" value="~/App_Data/DB.mdb;"/>
+  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime/>
-    <customErrors mode="RemoteOnly" defaultRedirect="error.html"/>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime />
+    <customErrors mode="RemoteOnly" defaultRedirect="error.html" />
     <authentication mode="Forms">
-      <forms name=".FJYL" loginUrl="~/Admin/Login" protection="All" cookieless="UseCookies" slidingExpiration="true" timeout="60"/>
+      <forms name=".FJYL" loginUrl="~/Admin/Login" protection="All" cookieless="UseCookies" slidingExpiration="true" timeout="60" />
     </authentication>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
